Bug 425078 - Super key to activate Application Launcher can have a half-second delay
Summary: Super key to activate Application Launcher can have a half-second delay
Status: RESOLVED FIXED
Alias: None
Product: lattedock
Classification: Plasma
Component: application (show other bugs)
Version: 0.9.11
Platform: Manjaro Linux
: NOR minor
Target Milestone: ---
Assignee: Michail Vourlakos
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2020-08-06 17:52 UTC by tyroie
Modified: 2021-05-13 17:12 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed In:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description tyroie 2020-08-06 17:52:21 UTC
This is my first submission, apologies in advance if I mess this up!

SUMMARY
When using the Super key to open Latte's Application Launcher while the panel/dock is hidden, the panel appears immediately, then there's a half-second delay before the Application Launcher appears.

STEPS TO REPRODUCE
1. Enable the option. Right-click the panel, Layouts > Configure... A settings window opens, click Preferences Tab, then enable "Press Super to activate Application Launcher."
2. Make sure the panel/dock is hidden. In Panel Settings, Behavior tab, under Visibility, select Auto-hide.
3. Press the Super key.

OBSERVED RESULT
The panel/dock appears immediately, then after a half-second delay, the Application Launcher opens.

EXPECTED RESULT
The Application Launcher should open immediately.

SOFTWARE/OS VERSIONS
Operating System: Manjaro Linux
KDE Plasma Version: 5.19.3
KDE Frameworks Version: 5.72.0
Qt Version: 5.15.0
Kernel Version: 5.7.9-1-MANJARO
OS Type: 64-bit
Processors: 12 × AMD Ryzen 5 3600 6-Core Processor
Memory: 15.6 GiB of RAM
Graphics Processor: GeForce GTX 970/PCIe/SSE2
Comment 1 Michail Vourlakos 2020-08-06 17:58:07 UTC
There is the slidein animation, shouldn't delay a bit?
Comment 2 tyroie 2020-08-06 18:21:50 UTC
I must have that animation disabled somewhere. Animation aside, When I mouse-click the Application Launcher's icon, or if I hit the Super key while the panel is visible, then there is no delay. Maybe there's something strange about my settings or something.
Comment 3 Michail Vourlakos 2020-08-06 18:53:22 UTC
1. Is your compositing enabled?
2. Is parabolic effect working properly?
Comment 4 tyroie 2020-08-06 19:44:06 UTC
No to both! I must have turned off Composting a long time ago. Enabling it makes the parabolic effect work, as well as animations, and some other options.

The half-second delay is still there, but it does make more sense with the animations active.

My normal behavior is to tap the Super key and immediately begin typing into the Application Launcher. The half-second delay interrupts this behavior somewhat, but I have no idea if that's reason enough to change anything.
Comment 5 Michail Vourlakos 2020-08-06 21:14:24 UTC
The reason for the delay is because if the pop up is triggered immediately and the Dock is hidden then the pop-up will start from the screen edge and it will be out of place when the Dock finally slides in. Latte can not reposition popups


On the other hand some cleverness in order for the pop-up to slide in exactly after the slide in completes might make sense. So based on animations the pop-up should be immediately shown after slide in even when the slide in is instant...
Comment 6 tyroie 2020-08-07 04:28:34 UTC
Ah yeah, that does make sense.
To my tastes, I can imagine that would feel perfectly snappy!
Comment 7 Michail Vourlakos 2021-05-13 17:12:47 UTC
Git commit 76549a9f998d79f819cbc82d1f51b788c704f7cc by Michail Vourlakos.
Committed on 13/05/2021 at 17:09.
Pushed by mvourlakos into branch 'master'.

shortcuts:wait for view to fully shown properly

--the new approach is not using timers but actual
events from View in order to identify when the
view is fully shown and when their popup is actual
visible. This way popup showing and view slide-in
is always synchronized properly

M  +33   -23   app/shortcuts/globalshortcuts.cpp
M  +2    -0    app/shortcuts/globalshortcuts.h
M  +1    -1    app/view/containmentinterface.cpp
M  +5    -0    app/view/view.cpp
M  +5    -0    app/view/visibilitymanager.cpp
M  +1    -0    app/view/visibilitymanager.h
M  +5    -5    containment/package/contents/ui/abilities/Indexer.qml

https://invent.kde.org/plasma/latte-dock/commit/76549a9f998d79f819cbc82d1f51b788c704f7cc