app/shortcuts/globalshortcuts.h
@@ -53,6 +53,8 @@ class GlobalShortcuts : public QObject
     Q_OBJECT
 
 public:
+    static constexpr const char* SHORTCUTBLOCKHIDINGTYPE  = "globalshortcuts::blockHiding()";
+
     GlobalShortcuts(QObject *parent = nullptr);
     ~GlobalShortcuts() override;
 
